--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   "keywords": [
     "gruntplugin"
   ],
-  "scripts": {
+  "scripts": [
  "preinstall": "npm config set package-lock false",
  "start": "node server.js",
  "build": "npm install"
-    },
-  "dependencies": {
+    ],
+  "dependencies": [
     "baucis": "^1.6.5",
     "baucis-swagger2": "exo-dev/baucis-swagger2",
     "express": "^4.14.0",
     "mongoose": ">=5.7.4"
-  }
+  ]
 }
