--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grunt-baucis-swagger2",
+  "name": "@leandrofortin10/grunt-baucis-swagger2",
   "description": "The best Grunt plugin ever.",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "homepage": "https://gitlab.com/exo-dev/grunt-baucis-swagger2",
   "author": {
     "name": "Agustin Croce",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/exo-dev/grunt-baucis-swagger2.git"
+    "url": "git://github.com/leandrofortin10/grunt-baucis-swagger2.git"
   },
   "bugs": {
     "url": "https://github.com/exo-dev/grunt-baucis-swagger2/issues"
@@ -21,15 +21,18 @@
     }
   ],
   "engines": {
-    "node": ">= 15.0.0"
+    "node": ">= 0.8.0"
   },
   "keywords": [
     "gruntplugin"
   ],
-  "dependencies": [
+  "dependencies": {
     "baucis": "^1.6.5",
     "baucis-swagger2": "exo-dev/baucis-swagger2",
     "express": "^4.14.0",
-    "mongoose": ">=5.7.4"
-  ]
+    "mongoose": ">=5.7.5"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
